Updated German translation by LeoLele99

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -59,8 +59,8 @@ item.warpdrive.forcefield.shape.tooltip.usage=§bRechtsklicke einen Projektor§7
 
 item.warpdrive.forcefield.upgrade.none.name=Kein Upgrade
 item.warpdrive.forcefield.upgrade.none.tooltip=§4Ungültiges Item
-item.warpdrive.forcefield.upgrade.attraction.name=Attraction upgrade !!!
-item.warpdrive.forcefield.upgrade.attraction.tooltip=Pull block breaker drops for storage. Add more Attraction upgrades to affect items, passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect. !!!
+item.warpdrive.forcefield.upgrade.attraction.name=Anziehungs Upgrade
+item.warpdrive.forcefield.upgrade.attraction.tooltip=Zieht Block Brecher Drops in einen Stauraum. Füge mehr Anzeihungs Upgrades hinzu, um Items, passive Entities, Monster und Spieler anzuziehen. Nutze ein Inversions Upgrade für einen Terraform Effekt.
 item.warpdrive.forcefield.upgrade.breaking.name=Block Brecher Upgrade
 item.warpdrive.forcefield.upgrade.breaking.tooltip=Zerstört Blöcke anstatt ein Kraftfeld zu projizieren. Füge Block Brecher Upgrades hinzu um den Efffekt zu verstärken.
 item.warpdrive.forcefield.upgrade.camouflage.name=Camouflage Upgrade
@@ -70,17 +70,17 @@ item.warpdrive.forcefield.upgrade.cooling.tooltip=Friere Blöcke und Entities ei
 item.warpdrive.forcefield.upgrade.fusion.name=Fusions Upgrade
 item.warpdrive.forcefield.upgrade.fusion.tooltip=Verschmelze zwei Kraftfelder, die dieselbe Strahlfrequenz haben.
 item.warpdrive.forcefield.upgrade.heating.name=Heizungs Upgrade
-item.warpdrive.forcefield.upgrade.heating.tooltip=Erhitze Blöcke und Entities. Mehr Upgrades verstärken den Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.heating.tooltip=Erhitze Blöcke und Entities. Mehr Upgrades verstärken den Effekt. Nutze ein Inversions Upgrade für Terraforming Effekt.
 item.warpdrive.forcefield.upgrade.inversion.name=Inversions Upgrade
 item.warpdrive.forcefield.upgrade.inversion.tooltip=§4Work in progress\nOberflächen Effekt zu Raum Effekt. Für Entity Zielerfassung oder Terraforming.
-item.warpdrive.forcefield.upgrade.itemPort.name=Item port upgrade !!!
-item.warpdrive.forcefield.upgrade.itemPort.tooltip=Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops. Add a Repulsion upgrade to provide blocks to place using a Stabilization upgrade. !!!
+item.warpdrive.forcefield.upgrade.itemPort.name=Item Anschluss Upgrade
+item.warpdrive.forcefield.upgrade.itemPort.tooltip=Interagiere mit angeschlossenen Stauräumen. Nutze ein Anziehungs Upgrade, um Block Brecher Drops anzuziehen. Nutze ein Rückstoß Upgrade, um mit einem Stabilisations Upgrade Blöcke zu setzen.
 item.warpdrive.forcefield.upgrade.pumping.name=Pumpen Upgrade
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4Work in progress\nPumpe Flüssigkeiten im Einflussbereich. Um dickflüssigeres zu pumpen füge mehr  Pumpen Upgrades hinzu.
 item.warpdrive.forcefield.upgrade.range.name=Reichweiten Upgrade
 item.warpdrive.forcefield.upgrade.range.tooltip=Vergrößere den maximalen Einflussbereich
-item.warpdrive.forcefield.upgrade.repulsion.name=Repulsion upgrade !!!
-item.warpdrive.forcefield.upgrade.repulsion.tooltip=Push stored items to be placed by stabilisation upgrade. Add more Repulsion upgrades to affect passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect. !!!
+item.warpdrive.forcefield.upgrade.repulsion.name=Rückstoß Upgrade
+item.warpdrive.forcefield.upgrade.repulsion.tooltip=Verschiebe gelagerte Items, um sie mit einem Stabilisations Upgrade zu setzen. Füge mehr Rückstoß Upgrades hinzu, um Items, passive Entities, Monster und Spieler zu beeinflussen. Nutze ein Inversions Upgrade für einen Terraform Effekt.
 item.warpdrive.forcefield.upgrade.rotation.name=Rotations Upgrade
 item.warpdrive.forcefield.upgrade.rotation.tooltip=Aktiviert Kraftfeld Roatation
 item.warpdrive.forcefield.upgrade.shock.name=Shock Upgrade
@@ -330,23 +330,23 @@ warpdrive.forcefield.shape.statusLine.tunnel=Tunnel
 warpdrive.forcefield.upgrade.result.noUpgradeToDismount=§cKein Upgrade zum deinstallieren vorhanden.
 warpdrive.forcefield.upgrade.result.notEnoughUpgrades=§cDu brauchst mindestens 1 Item um diesen Block aufzuwerten.
 warpdrive.forcefield.upgrade.result.invalidProjectorUpgrade=§cDieses Upgrade ist zu groß für einen Projektor. Nutze ein Relais.
-warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cThis upgrade only applies to projectors. !!!
+warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cDieses Upgrade funktioniert nur bei Projektoren!
 warpdrive.forcefield.upgrade.result.dismounted=Upgrade erfolgreich deinstalliert.
 warpdrive.forcefield.upgrade.result.mounted=Upgrade erfolgreich installiert.
 
 warpdrive.forcefield.upgrade.statusLine.none=§7Kein Upgrade installiert.
 warpdrive.forcefield.upgrade.statusLine.valid=%1$s Upgrade installiert
-warpdrive.forcefield.upgrade.statusLine.attraction=attraction !!!
+warpdrive.forcefield.upgrade.statusLine.attraction=Anziehung
 warpdrive.forcefield.upgrade.statusLine.breaking=Block Brecher
 warpdrive.forcefield.upgrade.statusLine.camouflage=Camouflage
 warpdrive.forcefield.upgrade.statusLine.cooling=Kühler
 warpdrive.forcefield.upgrade.statusLine.fusion=Fusions
 warpdrive.forcefield.upgrade.statusLine.heating=Heizungs
 warpdrive.forcefield.upgrade.statusLine.inversion=Inversions
-warpdrive.forcefield.upgrade.statusLine.itemPort=item port !!!
+warpdrive.forcefield.upgrade.statusLine.itemPort=Item Anschluss
 warpdrive.forcefield.upgrade.statusLine.pump=Pumpen
 warpdrive.forcefield.upgrade.statusLine.range=Reichweiten
-warpdrive.forcefield.upgrade.statusLine.repulsion=repulsion !!!
+warpdrive.forcefield.upgrade.statusLine.repulsion=Rückstoß
 warpdrive.forcefield.upgrade.statusLine.rotation=Rotations
 warpdrive.forcefield.upgrade.statusLine.shock=Schock
 warpdrive.forcefield.upgrade.statusLine.silencer=Schalldämpfer
