--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -105,7 +105,7 @@ item.warpdrive.upgrade.Range.name=Range Upgrade
 item.warpdrive.upgrade.Energy.name=Energy Upgrade
 
 item.warpdrive.tool.crystalToken.name=Crystal token
-item.warpdrive.tool.crystalToken.tooltip=§bStand in the beam§7 to build your ship
+item.warpdrive.tool.crystalToken.tooltip=Crystal encapsulation of ship '%1$s'\n§bStand in the beam§7 to build your ship
 item.warpdrive.tool.crystalToken0.name=Crystal token #0
 item.warpdrive.tool.crystalToken1.name=Crystal token #1 
 item.warpdrive.tool.crystalToken2.name=Crystal token #2
