Added air breathing armors tooltips
Improved self-death messages formatting
Fixed asphyxia death message not translating

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -1,14 +1,15 @@
-﻿death.attack.warpdrive.asphyxia=%s ging die Luft aus
+﻿
+death.attack.warpdrive.asphyxia=%1$s ging die Luft aus
 death.attack.warpdrive.asphyxia.player=%1$s wurde von %2$s erstickt
-death.attack.warpdrive.cold=%s erfror
+death.attack.warpdrive.cold=%1$s erfror
 death.attack.warpdrive.cold.player=%1$s wurde von %2$s zu Tode gefroren
-death.attack.warpdrive.laser=%s verbruzelte im Laser
+death.attack.warpdrive.laser=%1$s verbruzelte im Laser
 death.attack.warpdrive.laser.player=%1$s wurde von %2$s zu Tode gelasert
-death.attack.warpdrive.shock=%s starb an einen Stromschlag
+death.attack.warpdrive.shock=%1$s starb an einen Stromschlag
 death.attack.warpdrive.shock.player=%1$s wurde von %2$s zu Tode geschockt
-death.attack.warpdrive.teleportation=%s wurde in seine Atome zerlegt
+death.attack.warpdrive.teleportation=%1$s wurde in seine Atome zerlegt
 death.attack.warpdrive.teleportation.player=%1$s wurde durch %2$s beim teleportieren getötet
-death.attack.warpdrive.warm=%s verglühte
+death.attack.warpdrive.warm=%1$s verglühte
 death.attack.warpdrive.warm.player=%1$s wurde von %2$s gebruzelt
 
 item.warpdrive.crafting.Malformed.name=Korruptes Item
@@ -368,6 +369,6 @@ warpdrive.IC2reactorLaserMonitor.noReactor=Kein Reaktor gefunden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d Reaktor(en) verbunden.
 warpdrive.transporter.status=Von %1$.0f %2$.0f %3$.0f zu %4$.0f %5$.0f %6$.0f
 
-
-
-
+warpdrive.tooltip.itemTag.breathingIC2=§bSpace breathing§r consuming IC2 Compressed air cells from your inventory. !!!
+warpdrive.tooltip.itemTag.flyInSpace=§bSpace compatible jetpack§r. !!!
+warpdrive.tooltip.itemTag.noFallDamage=§bAbsorbs fall damage§r. !!!
