--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -1,14 +1,15 @@
-﻿death.attack.warpdrive.asphyxia=%s умер от удушья
+﻿
+death.attack.warpdrive.asphyxia=%1$s умер от удушья
 death.attack.warpdrive.asphyxia.player=%2$s убил %1$s с помощью удушья
-death.attack.warpdrive.cold=%s died from cold
+death.attack.warpdrive.cold=%1$s died from cold
 death.attack.warpdrive.cold.player=%1$s was frozen to death by %2$s 
-death.attack.warpdrive.laser=%s died from crossing the beam
+death.attack.warpdrive.laser=%1$s died from crossing the beam
 death.attack.warpdrive.laser.player=%1$s was laserified by %2$s
-death.attack.warpdrive.shock=%s was electrocuted
+death.attack.warpdrive.shock=%1$s was electrocuted
 death.attack.warpdrive.shock.player=%1$s was electrocuted by %2$s
-death.attack.warpdrive.teleportation=%s не пережил рематериализацию
+death.attack.warpdrive.teleportation=%1$s не пережил рематериализацию
 death.attack.warpdrive.teleportation.player=%2$s убил %1$s телепортацией
-death.attack.warpdrive.warm=%s died from excessive temperature
+death.attack.warpdrive.warm=%1$s died from excessive temperature
 death.attack.warpdrive.warm.player=%1$s was cooked by %2$s
 
 item.warpdrive.crafting.Malformed.name=Поврежденный предмет
@@ -369,6 +370,6 @@ warpdrive.IC2reactorLaserMonitor.noReactor=Реактор не найден!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d реактор(ов) подключено.
 warpdrive.transporter.status=Из %1$.0f %2$.0f %3$.0f в %4$.0f %5$.0f %6$.0f
 
-
-
-
+warpdrive.tooltip.itemTag.breathingIC2=§bSpace breathing§r consuming IC2 Compressed air cells from your inventory.
+warpdrive.tooltip.itemTag.flyInSpace=§bSpace compatible jetpack§r.
+warpdrive.tooltip.itemTag.noFallDamage=§bAbsorbs fall damage§r.
