--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -106,6 +106,16 @@ item.warpdrive.upgrade.Range.name=Reichweiten Upgrade
 item.warpdrive.upgrade.Energy.name=Energie Upgrade
 
 
+item.warpdrive.tool.crystalToken.name=Crystal token !!!
+item.warpdrive.tool.crystalToken.tooltip=Crystal encapsulation of ship '%1$s'\n§bEnter the scanner field§7 to build your ship !!!
+item.warpdrive.tool.crystalToken0.name=Crystal token #0 !!!
+item.warpdrive.tool.crystalToken1.name=Crystal token #1 !!!
+item.warpdrive.tool.crystalToken2.name=Crystal token #2 !!!
+item.warpdrive.tool.crystalToken3.name=Crystal token #3 !!!
+item.warpdrive.tool.crystalToken4.name=Crystal token #4 !!!
+item.warpdrive.tool.crystalToken5.name=Crystal token #5 !!!
+
+
 item.warpdrive.tool.TuningFork.name=Stimmgabel
 item.warpdrive.tool.TuningFork.white.name=Weiße Stimmgabel
 item.warpdrive.tool.TuningFork.orange.name=Orange Stimmgabel
@@ -226,6 +236,23 @@ tile.warpdrive.hull1.glass.green.name=Grüner Standard Glasrumpf
 tile.warpdrive.hull1.glass.red.name=Roter Standard Glasrumpf
 tile.warpdrive.hull1.glass.black.name=Schwarzer Standard Glasrumpf
 
+tile.warpdrive.hull1.stairs.white.name=Weißer Standard Treppe!!!
+tile.warpdrive.hull1.stairs.orange.name=Oranger Standard Treppe!!!
+tile.warpdrive.hull1.stairs.magenta.name=Magenta Standard Treppe!!!
+tile.warpdrive.hull1.stairs.lightBlue.name=Hellblauer Standard Treppe!!!
+tile.warpdrive.hull1.stairs.yellow.name=Gelber Standard Treppe!!!
+tile.warpdrive.hull1.stairs.lime.name=Hellgrüner Standard Treppe!!!
+tile.warpdrive.hull1.stairs.pink.name=Rosa Standard Treppe!!!
+tile.warpdrive.hull1.stairs.gray.name=Grauer Standard Treppe!!!
+tile.warpdrive.hull1.stairs.silver.name=Silberner Standard Treppe!!!
+tile.warpdrive.hull1.stairs.cyan.name=Cyan Standard Treppe!!!
+tile.warpdrive.hull1.stairs.purple.name=Lila Standard Treppe!!!
+tile.warpdrive.hull1.stairs.blue.name=Blauer Standard Treppe!!!
+tile.warpdrive.hull1.stairs.brown.name=Brauner Standard Treppe!!!
+tile.warpdrive.hull1.stairs.green.name=Grüner Standard Treppe!!!
+tile.warpdrive.hull1.stairs.red.name=Roter Standard Treppe!!!
+tile.warpdrive.hull1.stairs.black.name=Schwarzer Standard Treppe!!!
+
 tile.warpdrive.hull2.plain.white.name=Weißer weiterentwickelter Rumpf
 tile.warpdrive.hull2.plain.orange.name=Oranger weiterentwickelter Rumpf
 tile.warpdrive.hull2.plain.magenta.name=Magenta weiterentwickelter Rumpf
@@ -260,6 +287,23 @@ tile.warpdrive.hull2.glass.green.name=Grüner weiterentwickelter Glasrumpf
 tile.warpdrive.hull2.glass.red.name=Roter weiterentwickelter Glasrumpf
 tile.warpdrive.hull2.glass.black.name=Schwarzer weiterentwickelter Glasrumpf
 
+tile.warpdrive.hull2.stairs.white.name=Weißer weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.orange.name=Oranger weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.magenta.name=Magenta weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.lightBlue.name=Hellblauer weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.yellow.name=Gelber weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.lime.name=Lime weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.pink.name=Rosa weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.gray.name=Grauer weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.silver.name=Silberner weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.cyan.name=Cyan weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.purple.name=Lila weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.blue.name=Blauer weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.brown.name=Brauner weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.green.name=Grüner weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.red.name=Roter weiterentwickelter Treppe!!!
+tile.warpdrive.hull2.stairs.black.name=Schwarzer weiterentwickelter Treppe!!!
+
 tile.warpdrive.hull3.plain.white.name=Weißer überlegener Rumpf
 tile.warpdrive.hull3.plain.orange.name=Oranger überlegener Rumpf
 tile.warpdrive.hull3.plain.magenta.name=Magenta überlegener Rumpf
@@ -293,6 +337,23 @@ tile.warpdrive.hull3.glass.brown.name=Brauner überlegener Glasrumpf
 tile.warpdrive.hull3.glass.green.name=Grüner überlegener Glasrumpf
 tile.warpdrive.hull3.glass.red.name=Roter überlegener Glasrumpf
 tile.warpdrive.hull3.glass.black.name=Schwarzer überlegener Glasrumpf
+
+tile.warpdrive.hull3.stairs.white.name=Weißer überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.orange.name=Oranger überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.magenta.name=Magenta überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.lightBlue.name=Hellblauer überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.yellow.name=Gelber überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.lime.name=Lime überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.pink.name=Rosa überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.gray.name=Grauer überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.silver.name=Silberner überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.cyan.name=Cyan überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.purple.name=Lila überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.blue.name=Blauer überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.brown.name=Brauner überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.green.name=Grüner überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.red.name=Roter überlegener Treppe!!!
+tile.warpdrive.hull3.stairs.black.name=Schwarzer überlegener Treppe!!!
 
 
 warpdrive.guide.prefix=§6%1$s:§r
