--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -76,7 +76,6 @@ item.warpdrive.forcefield.upgrade.inversion.name=Augmentation d'inversion
 item.warpdrive.forcefield.upgrade.inversion.tooltip=§4En cours d'implémentation\nModifie la zone d'effet de surface en volume. Utilise le pour cibler des entités à l'intérieur du champ ou effectuer une terraformation.
 item.warpdrive.forcefield.upgrade.itemPort.name=Augmentation de port d'item
 item.warpdrive.forcefield.upgrade.itemPort.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
-Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops.
 item.warpdrive.forcefield.upgrade.pumping.name=Augmentation de pompage
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4En cours d'implémentation\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
 item.warpdrive.forcefield.upgrade.range.name=Augmentation de portée
@@ -105,6 +104,16 @@ item.warpdrive.upgrade.Power.name=Amélioration de puissance
 item.warpdrive.upgrade.Speed.name=Amélioration de vitesse
 item.warpdrive.upgrade.Range.name=Amélioration de portée
 item.warpdrive.upgrade.Energy.name=Amélioration d'énergie
+
+
+item.warpdrive.tool.crystalToken.name=Crystal jeton
+item.warpdrive.tool.crystalToken.tooltip=Vaisseau '%1$s' encapsulé dans un crystal\n§bEntre dans le champ du scanner§7 pour construire ton vaisseau
+item.warpdrive.tool.crystalToken0.name=Crystal jeton #0
+item.warpdrive.tool.crystalToken1.name=Crystal jeton #1
+item.warpdrive.tool.crystalToken2.name=Crystal jeton #2
+item.warpdrive.tool.crystalToken3.name=Crystal jeton #3
+item.warpdrive.tool.crystalToken4.name=Crystal jeton #4
+item.warpdrive.tool.crystalToken5.name=Crystal jeton #5
 
 
 item.warpdrive.tool.TuningFork.name=Diapason
@@ -227,6 +236,23 @@ tile.warpdrive.hull1.glass.green.name=Vitre de coque élémentaire verte
 tile.warpdrive.hull1.glass.red.name=Vitre de coque élémentaire rouge
 tile.warpdrive.hull1.glass.black.name=Vitre de coque élémentaire noire
 
+tile.warpdrive.hull1.stairs.white.name=Escalier de coque élémentaire blanche
+tile.warpdrive.hull1.stairs.orange.name=Escalier de coque élémentaire orange
+tile.warpdrive.hull1.stairs.magenta.name=Escalier de coque élémentaire magenta
+tile.warpdrive.hull1.stairs.lightBlue.name=Escalier de coque élémentaire bleu claire
+tile.warpdrive.hull1.stairs.yellow.name=Escalier de coque élémentaire jaune
+tile.warpdrive.hull1.stairs.lime.name=Escalier de coque élémentaire citron vert
+tile.warpdrive.hull1.stairs.pink.name=Escalier de coque élémentaire rose
+tile.warpdrive.hull1.stairs.gray.name=Escalier de coque élémentaire grise
+tile.warpdrive.hull1.stairs.silver.name=Escalier de coque élémentaire argentée
+tile.warpdrive.hull1.stairs.cyan.name=Escalier de coque élémentaire cyan
+tile.warpdrive.hull1.stairs.purple.name=Escalier de coque élémentaire violette
+tile.warpdrive.hull1.stairs.blue.name=Escalier de coque élémentaire bleue
+tile.warpdrive.hull1.stairs.brown.name=Escalier de coque élémentaire marron
+tile.warpdrive.hull1.stairs.green.name=Escalier de coque élémentaire verte
+tile.warpdrive.hull1.stairs.red.name=Escalier de coque élémentaire rouge
+tile.warpdrive.hull1.stairs.black.name=Escalier de coque élémentaire noire
+
 tile.warpdrive.hull2.plain.white.name=Coque avancée blanche
 tile.warpdrive.hull2.plain.orange.name=Coque avancée orange
 tile.warpdrive.hull2.plain.magenta.name=Coque avancée magenta
@@ -261,6 +287,23 @@ tile.warpdrive.hull2.glass.green.name=Vitre de coque avancée verte
 tile.warpdrive.hull2.glass.red.name=Vitre de coque avancée rouge
 tile.warpdrive.hull2.glass.black.name=Vitre de coque avancée noire
 
+tile.warpdrive.hull2.stairs.white.name=Escalier de coque avancée blanche
+tile.warpdrive.hull2.stairs.orange.name=Escalier de coque avancée orange
+tile.warpdrive.hull2.stairs.magenta.name=Escalier de coque avancée magenta
+tile.warpdrive.hull2.stairs.lightBlue.name=Escalier de coque avancée bleu claire
+tile.warpdrive.hull2.stairs.yellow.name=Escalier de coque avancée jaune
+tile.warpdrive.hull2.stairs.lime.name=Escalier de coque avancée citron vert
+tile.warpdrive.hull2.stairs.pink.name=Escalier de coque avancée rose
+tile.warpdrive.hull2.stairs.gray.name=Escalier de coque avancée grise
+tile.warpdrive.hull2.stairs.silver.name=Escalier de coque avancée argentée
+tile.warpdrive.hull2.stairs.cyan.name=Escalier de coque avancée cyan
+tile.warpdrive.hull2.stairs.purple.name=Escalier de coque avancée violette
+tile.warpdrive.hull2.stairs.blue.name=Escalier de coque avancée bleue
+tile.warpdrive.hull2.stairs.brown.name=Escalier de coque avancée marron
+tile.warpdrive.hull2.stairs.green.name=Escalier de coque avancée verte
+tile.warpdrive.hull2.stairs.red.name=Escalier de coque avancée rouge
+tile.warpdrive.hull2.stairs.black.name=Escalier de coque avancée noire
+
 tile.warpdrive.hull3.plain.white.name=Coque supérieure blanche
 tile.warpdrive.hull3.plain.orange.name=Coque supérieure orange
 tile.warpdrive.hull3.plain.magenta.name=Coque supérieure magenta
@@ -294,6 +337,23 @@ tile.warpdrive.hull3.glass.brown.name=Vitre de coque supérieure marron
 tile.warpdrive.hull3.glass.green.name=Vitre de coque supérieure verte
 tile.warpdrive.hull3.glass.red.name=Vitre de coque supérieure rouge
 tile.warpdrive.hull3.glass.black.name=Vitre de coque supérieure noire
+
+tile.warpdrive.hull3.stairs.white.name=Escalier de coque supérieure blanche
+tile.warpdrive.hull3.stairs.orange.name=Escalier de coque supérieure orange
+tile.warpdrive.hull3.stairs.magenta.name=Escalier de coque supérieure magenta
+tile.warpdrive.hull3.stairs.lightBlue.name=Escalier de coque supérieure bleu claire
+tile.warpdrive.hull3.stairs.yellow.name=Escalier de coque supérieure jaune
+tile.warpdrive.hull3.stairs.lime.name=Escalier de coque supérieure citron vert
+tile.warpdrive.hull3.stairs.pink.name=Escalier de coque supérieure rose
+tile.warpdrive.hull3.stairs.gray.name=Escalier de coque supérieure grise
+tile.warpdrive.hull3.stairs.silver.name=Escalier de coque supérieure argentée
+tile.warpdrive.hull3.stairs.cyan.name=Escalier de coque supérieure cyan
+tile.warpdrive.hull3.stairs.purple.name=Escalier de coque supérieure violette
+tile.warpdrive.hull3.stairs.blue.name=Escalier de coque supérieure bleue
+tile.warpdrive.hull3.stairs.brown.name=Escalier de coque supérieure marron
+tile.warpdrive.hull3.stairs.green.name=Escalier de coque supérieure verte
+tile.warpdrive.hull3.stairs.red.name=Escalier de coque supérieure rouge
+tile.warpdrive.hull3.stairs.black.name=Escalier de coque supérieure noire
 
 
 warpdrive.guide.prefix=§6%1$s:§r 
