--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -32,8 +32,9 @@ item.warpdrive.crafting.Motor.name=Motor
 item.warpdrive.crafting.BoneCharcoal.name=Bone Charcoal
 item.warpdrive.crafting.ActivatedCarbon.name=Activated Carbon
 item.warpdrive.crafting.LaserMediumEmpty.name=Laser Medium (empty)
-item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetic Projector
 item.warpdrive.crafting.CoilCrystal.name=Coil Crystal
+item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetic Projector
+item.warpdrive.crafting.Superconductor.name=Superconductor
 
 item.warpdrive.armor.AirCanisterFull.name=Air Canister
 item.warpdrive.armor.Helmet.name=Warp Helmet
@@ -169,7 +170,11 @@ tile.warpdrive.detection.WarpIsolation.name=Warp-field Isolation Block
 
 tile.warpdrive.energy.EnanReactorCore.name=Enantiomorphic Reactor Core
 tile.warpdrive.energy.EnanReactorLaser.name=Enantiomorphic Reactor Stabilization Laser
-tile.warpdrive.energy.EnergyBank.name=Anuic Energy Bank
+tile.warpdrive.energy.EnergyBank.0.name=Zero-Point Module
+tile.warpdrive.energy.EnergyBank.0.tooltip=Creative Subspace Capacitor
+tile.warpdrive.energy.EnergyBank.1.name=Basic Subspace Capacitor
+tile.warpdrive.energy.EnergyBank.2.name=Advanced Subspace Capacitor
+tile.warpdrive.energy.EnergyBank.3.name=Superior Subspace Capacitor
 tile.warpdrive.energy.IC2ReactorLaserMonitor.name=IC2 Reactor Laser Monitor
 
 tile.warpdrive.forcefield.block1.name=Basic Force Field Block
