--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -369,22 +369,17 @@ warpdrive.ship.playerAttached=You're now attached to ship %1$s.\nAttached player
 warpdrive.ship.playerDetached=You've been detached from ship %1$s.\nAttached players are %2$s
 warpdrive.ship.statusLine.cooling=%1$d s left of cooldown.
 warpdrive.ship.statusLine.isolation=%1$d active isolation blocks providing %2$2.1f%% absorption.
+
 warpdrive.energy.statusLine=Energy level is %1$s/%2$s EU.
 warpdrive.energy.side.changedToInput=%1$s side changed to energy Input mode!
 warpdrive.energy.side.changedToOutput=%1$s side changed to energy Output mode!
 warpdrive.energy.side.changedToDisabled=%1$s side changed to Disabled mode!
+
 warpdrive.beamFrequency.statusLine.valid=Beam frequency %1$d is valid.
 warpdrive.beamFrequency.statusLine.invalid=§cBeam frequency %1$d is invalid.
 warpdrive.beamFrequency.statusLine.undefined=§7Undefined beam frequency.\n§bUse a Tuning fork§r to set it.
 
 warpdrive.forcefield.guide.lowPower=We're running out of power captain, reduce our consumption or get that scottish engineer to boost our power!
-
-warpdrive.forcefield.shape.result.wrongSide=§cThere's no Electromagnetic projector on this side.
-warpdrive.forcefield.shape.result.noShapeToDismount=§cNo shape to dismount.
-warpdrive.forcefield.shape.result.notEnoughShapes.double=§cYou need at least 2 items to set the shape of a double sided projector.
-warpdrive.forcefield.shape.result.notEnoughShapes.single=§cYou need at least 1 item to set the shape of a single sided projector.
-warpdrive.forcefield.shape.result.dismounted=Shape dismounted successfully.
-warpdrive.forcefield.shape.result.mounted=Shape mounted successfully.
 
 warpdrive.forcefield.shape.statusLine.none=§cShape isn't defined.
 warpdrive.forcefield.shape.statusLine.double=Shape is a full %1$s
@@ -397,16 +392,6 @@ warpdrive.forcefield.shape.statusLine.plane=plane
 warpdrive.forcefield.shape.statusLine.tube=tube
 warpdrive.forcefield.shape.statusLine.tunnel=tunnel
 
-warpdrive.forcefield.upgrade.result.noUpgradeToDismount=§cNo upgrade to dismount.
-warpdrive.forcefield.upgrade.result.notEnoughUpgrades=§cYou need at least 1 item to upgrade this block.
-warpdrive.forcefield.upgrade.result.invalidProjectorUpgrade=§cThis upgrade is too big for a projector, use a relay instead.
-warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cThis upgrade only applies to projectors.
-warpdrive.forcefield.upgrade.result.tooManyUpgrades=§cThere's already %1$s upgrades installed, use a relay to add more.
-warpdrive.forcefield.upgrade.result.dismounted=Upgrade dismounted successfully.
-warpdrive.forcefield.upgrade.result.mounted=Upgrade mounted successfully.
-
-warpdrive.forcefield.upgrade.statusLine.none=§7No upgrade installed.
-warpdrive.forcefield.upgrade.statusLine.valid=Upgraded with %1$s
 warpdrive.forcefield.upgrade.statusLine.attraction=attraction
 warpdrive.forcefield.upgrade.statusLine.breaking=block breaking
 warpdrive.forcefield.upgrade.statusLine.camouflage=camouflage
@@ -425,6 +410,26 @@ warpdrive.forcefield.upgrade.statusLine.speed=speed
 warpdrive.forcefield.upgrade.statusLine.stabilization=stabilization
 warpdrive.forcefield.upgrade.statusLine.thickness=thickness
 warpdrive.forcefield.upgrade.statusLine.translation=translation
+
+warpdrive.upgrade.result.noUpgradeToDismount=§cNo upgrade to dismount.
+warpdrive.upgrade.result.notEnoughUpgrades=§cYou need at least 1 item to upgrade this block.
+warpdrive.upgrade.result.invalidUpgrade=§cThis is not a valid item to upgrade this block.
+warpdrive.upgrade.result.invalidProjectorUpgrade=§cThis upgrade is too big for a projector, use a relay instead.
+warpdrive.upgrade.result.invalidRelayUpgrade=§cThis upgrade only applies to projectors.
+warpdrive.upgrade.result.validUpgrades=Valid upgrades for this block include: %1$s. @TODO not implemented yet
+warpdrive.upgrade.result.tooManyUpgrades=§cThere's already %1$d upgrades installed.
+warpdrive.upgrade.result.dismounted=Upgrade %1$s was dismounted successfully.
+warpdrive.upgrade.result.mounted=Upgrade %1$s was mounted successfully.
+
+warpdrive.upgrade.result.wrongShapeSide=§cThere's no Electromagnetic projector on this side.
+warpdrive.upgrade.result.noShapeToDismount=§cNo shape to dismount.
+warpdrive.upgrade.result.notEnoughShapes.double=§cYou need at least 2 items to set the shape of a double sided projector.
+warpdrive.upgrade.result.notEnoughShapes.single=§cYou need at least 1 item to set the shape of a single sided projector.
+warpdrive.upgrade.result.shapeDismounted=Shape dismounted successfully.
+warpdrive.upgrade.result.shapeMounted=Shape mounted successfully.
+
+warpdrive.upgrade.statusLine.none=§7No upgrade installed.
+warpdrive.upgrade.statusLine.valid=Upgraded with %1$s.
 
 warpdrive.videoChannel.statusLine.valid=Video channel %1$d is valid.
 warpdrive.videoChannel.statusLine.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d.
